vehicle listing and dashboard add for renter